# minish

./: CMakeLists.txt  Dockerfile  Makefile  README.md
builtin/: annex_fct.c  bubble_sorte.c  builtin_main.c  builtins_kevin.c  builtins_utils.c  export_annex_quots.c  export_annex_quots_utils.c  export_builtin.c
incs/: minishell.h
libft/: Makefile
libft/incs/libft/: ft_dlst.h
srcs/: annexe_kevin.c  bubble_sort.c  builtin.c  builtins_kevin.c  env_utils.c  exec_cmds.c  export_kevin.c  ft_export.c  ft_lst_kevin.c  heredocing.c  main.c  parsing.c  path_utils.c  pipe.c  piping.c  prompt.c  redirection.c  signal_utils.c  unset_kevin.c  utils.c  vars_utils.c
